# srt2vtt

./: README.md  setup.cfg  setup.py  srt2vtt.py
srt2vtt/: parsers.py  srt2vtt.py  structures.py  webvtt.py
srt2vtt.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
srt2vtt/srt2vtt.egg-info/: PKG-INFO  SOURCES.txt
