[metadata]
name = srt2vtt
author = Chase Anderson
author_email = chase@anderson.vet
url = None
description = Used to automatically convert srt files to vtt files.
long_description = file: README.md
long_description_content_type = text/markdown
keywords = srt, vtt, setuptools
license = BSD 3-Clause License
classifiers =
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3

[options]
package_dir=
    =srt2vtt
packages=find:
zip_safe = False
include_package_data = True
install_requires = file: requirements.txt

[options.entry_points]
console_scripts = 
    srt2vtt = srt2vtt:main

[options.package_data]
* = README.md, *.txt

[options.packages.find]
where=srt2vtt